--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -10,6 +10,6 @@ import styles from "./index.module.scss";
 
 import "@toastup/react/style";
 
-import { Home } from "../components/Home";
+import { Hero } from "../components/Hero/Hero";
 
-<Home />
+<Hero />
