feat(docs): add animated blobs to hero page

--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -12,4 +12,16 @@ import "@toastup/react/style";
 
 import { Hero } from "../components/Hero/Hero";
 
+import { Blob1 } from "../components/Blobs/Blob1";
+
+import { Blob2 } from "../components/Blobs/Blob2";
+
+import { Blob3 } from "../components/Blobs/Blob3";
+
+import { Blob4 } from "../components/Blobs/Blob4";
+
 <Hero />
+<Blob1 className={styles.blob1} />
+<Blob2 className={styles.blob2} />
+<Blob3 className={styles.blob3} />
+<Blob4 className={styles.blob4} />
