--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -8,6 +8,8 @@ import "rsuite/dist/rsuite.min.css";
 
 import styles from "./index.module.scss";
 
+import sharedStyles from "../css/shared.module.scss";
+
 import "@toastup/react/style";
 
 import { Hero } from "../components/Hero/Hero";
@@ -20,8 +22,46 @@ import { Blob3 } from "../components/Blobs/Blob3";
 
 import { Blob4 } from "../components/Blobs/Blob4";
 
+import { Blob5 } from "../components/Blobs/Blob5";
+
+import { Blob6 } from "../components/Blobs/Blob6";
+
+import { Blob7 } from "../components/Blobs/Blob7";
+
+import { Blob8 } from "../components/Blobs/Blob8";
+
+### 🛝 Playground
+
 <Hero />
-<Blob1 className={styles.blob1} />
-<Blob2 className={styles.blob2} />
-<Blob3 className={styles.blob3} />
-<Blob4 className={styles.blob4} />
+
+### 🎉 Features
+
+<div className={styles.features}>
+
+- easy to use
+- easy to customize
+- beautiful by default
+- smooth animations
+- ability to override the id
+- optional title
+- 6 available positions on the screen
+- normal or reversed display order
+- 5 available types: base, info, success, warning, error
+- 3 themes: light, dark and colorful
+- 8 built-in enter animations
+- 8 built-in exit animations
+- 3 built-in optional body animations
+- ability to create custom animation with ease
+- limit the number of toasts visible on the screen at once
+- right-to-left support
+- custom styling
+- optional ability to drag on mobile
+- 5 available callbacks
+
+</div>
+
+<Blob1 className={sharedStyles.blob1} />
+<Blob2 className={sharedStyles.blob2} />
+<Blob3 className={sharedStyles.blob3} />
+<Blob5 className={sharedStyles.blob5} />
+<Blob6 className={sharedStyles.blob6} />
