feat(docs): move class for blobs directly to components respectively

--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -4,27 +4,25 @@ import { add, Toaster } from "@toastup/react";
 
 import styles from "./index.module.scss";
 
-import sharedStyles from "../css/shared.module.scss";
-
 import "@toastup/react/style";
 
-import { Hero } from "../components/Hero/Hero";
+import { Hero } from "@site/src/components/Hero/Hero";
 
-import { Blob1 } from "../components/Blobs/Blob1";
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
 
-import { Blob2 } from "../components/Blobs/Blob2";
+import { Blob2 } from "@site/src/components/Blobs/Blob2";
 
-import { Blob3 } from "../components/Blobs/Blob3";
+import { Blob3 } from "@site/src/components/Blobs/Blob3";
 
-import { Blob4 } from "../components/Blobs/Blob4";
+import { Blob4 } from "@site/src/components/Blobs/Blob4";
 
-import { Blob5 } from "../components/Blobs/Blob5";
+import { Blob5 } from "@site/src/components/Blobs/Blob5";
 
-import { Blob6 } from "../components/Blobs/Blob6";
+import { Blob6 } from "@site/src/components/Blobs/Blob6";
 
-import { Blob7 } from "../components/Blobs/Blob7";
+import { Blob7 } from "@site/src/components/Blobs/Blob7";
 
-import { Blob8 } from "../components/Blobs/Blob8";
+import { Blob8 } from "@site/src/components/Blobs/Blob8";
 
 ### 🛝 Playground
 
@@ -56,8 +54,8 @@ import { Blob8 } from "../components/Blobs/Blob8";
 
 </div>
 
-<Blob1 className={sharedStyles.blob1} />
-<Blob2 className={sharedStyles.blob2} />
-<Blob3 className={sharedStyles.blob3} />
-<Blob5 className={sharedStyles.blob5} />
-<Blob6 className={sharedStyles.blob6} />
+<Blob1 />
+<Blob2 />
+<Blob3 />
+<Blob5 />
+<Blob6 />
