feat(docs): add blob to docs

--- a/packages/docs/docs/api/add.mdx
+++ b/packages/docs/docs/api/add.mdx
@@ -82,3 +82,7 @@ const config: Partial<ReactToastConfig> = {
 };
 add(config);
 ```
+
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
+
+<Blob1 />
