--- a/packages/docs/docs/api/remove.mdx
+++ b/packages/docs/docs/api/remove.mdx
@@ -11,3 +11,7 @@ Function for deleting a specific toast notification programatically. Simply pass
 const id = add();
 remove(id);
 ```
+
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
+
+<Blob1 />
