--- a/packages/docs/docs/api/removeAll.mdx
+++ b/packages/docs/docs/api/removeAll.mdx
@@ -10,3 +10,7 @@ Function clears all toast notifications from the screen.
 ```ts
 removeAll();
 ```
+
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
+
+<Blob1 />
