--- a/packages/docs/docs/api/toaster.mdx
+++ b/packages/docs/docs/api/toaster.mdx
@@ -82,3 +82,7 @@ When a toast is created, it inherits options from the Toaster, but the toast's o
   dragOnMobile
 />
 ```
+
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
+
+<Blob1 />
