--- a/packages/docs/docs/getting-started.mdx
+++ b/packages/docs/docs/getting-started.mdx
@@ -36,3 +36,7 @@ function App() {
 Make sure to include the Toaster component exactly once in your application structure.
 If you're unsure where to place it, best place is the root of your application.
 :::
+
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
+
+<Blob1 />
