--- a/packages/docs/docs/guides/custom-animation.mdx
+++ b/packages/docs/docs/guides/custom-animation.mdx
@@ -30,3 +30,7 @@ add({
   outAnimation: animateCssFlipXOutAnimation,
 });
 ```
+
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
+
+<Blob1 />
