--- a/packages/docs/docs/guides/right-to-left.mdx
+++ b/packages/docs/docs/guides/right-to-left.mdx
@@ -14,3 +14,7 @@ import { RtlExample } from "@site/src/components/examples/RtlExample";
 ```ts
 add({ rtl: true });
 ```
+
+import { Blob1 } from "@site/src/components/Blobs/Blob1";
+
+<Blob1 />
