feat(docs): add body animation in "Custom animation" doc

--- a/packages/docs/docs/guides/custom-animation.mdx
+++ b/packages/docs/docs/guides/custom-animation.mdx
@@ -24,10 +24,17 @@ const animateCssFlipXOutAnimation = {
   className: "animate__animated animate__flipOutX",
   animationTime: 450,
 };
+const animateCssFlipXInBodyAnimation: ToastInBodyAnimation = {
+  type: animationType.body,
+  className: "animate__animated animate__flipInX",
+  animationTime: 450,
+};
 
 add({
   inAnimation: animateCssFlipXInAnimation,
   outAnimation: animateCssFlipXOutAnimation,
+  inBodyAnimation: animateCssFlipXInBodyAnimation,
+  animateBody: true
 });
 ```
 
