feat(docs): update api add doc

--- a/packages/docs/docs/api/add.mdx
+++ b/packages/docs/docs/api/add.mdx
@@ -25,7 +25,7 @@ When a toast is created, it inherits options from the Toaster, but the toast's o
 | outAnimation            | Animation applied when the toast disappears.                                       | `ToastOutAnimation`                | `slideHorizontalWithFadeInBody` |
 | inBodyAnimation         | Animation for the toast body when it appears.                                      | `ToastInBodyAnimation`             | `slideVerticallyOut`            |
 | hideOnClick             | If true, the toast hides when clicked.                                             | `boolean`                          | `true`                          |
-| autoHide                | Duration before the toast automatically hides.                                     | `number`                           | `3000`                          |
+| autoHide                | Duration in ms before the toast automatically hides.                               | `number`                           | `3000`                          |
 | delayBeforeShow         | Delay before the toast is shown.                                                   | `number`                           | `0`                             |
 | showProgress            | If true, displays a progress bar indicating remaining time.                        | `boolean`                          | `true`                          |
 | showIcon                | If true, shows an icon in the toast.                                               | `boolean`                          | `true`                          |
