feat(docs): update api toaster doc

--- a/packages/docs/docs/api/toaster.mdx
+++ b/packages/docs/docs/api/toaster.mdx
@@ -5,6 +5,10 @@ description: This component displays all of the toast notifications and can be p
 
 Component responsible for displaying all of the toast notifications. Can be positioned anywhere within application.
 
+:::warning
+It is recommended to have only one Toaster component in the application.
+:::
+
 :::info
 When a toast is created, it inherits options from the Toaster, but the toast's own options will override the Toaster's properties.
 :::
