refactor(docs): reformat files according to codebase standard

--- a/packages/docs/docs/guides/body-animation.mdx
+++ b/packages/docs/docs/guides/body-animation.mdx
@@ -17,7 +17,6 @@ To enable body animation set `animateBody` to `true`.
 add({ animateBody: true });
 ```
 
-
 There are three built-in body animations: `zoom`, `slideHorizontal` and `slideVertical`.
 You can change the default by setting `inBodyAnimation` property.
 
@@ -26,7 +25,7 @@ import { slideVerticallyWithFadeInBody } from "@toastup/react";
 
 add({
   animateBody: true,
-  inBodyAnimation: slideVerticallyWithFadeInBody
+  inBodyAnimation: slideVerticallyWithFadeInBody,
 });
 ```
 
