--- a/packages/docs/docs/guides/custom-animation.mdx
+++ b/packages/docs/docs/guides/custom-animation.mdx
@@ -34,7 +34,7 @@ add({
   inAnimation: animateCssFlipXInAnimation,
   outAnimation: animateCssFlipXOutAnimation,
   inBodyAnimation: animateCssFlipXInBodyAnimation,
-  animateBody: true
+  animateBody: true,
 });
 ```
 
