--- a/packages/docs/docs/guides/enter-exit-animation.mdx
+++ b/packages/docs/docs/guides/enter-exit-animation.mdx
@@ -15,7 +15,10 @@ You can change the default by setting `inAnimation` and `outAnimation` propertie
 `inAnimation` can be different from `outAnimation`.
 
 ```ts
-import { bounceHorizontallyIn, singleBounceVerticallyOut } from "@toastup/react";
+import {
+  bounceHorizontallyIn,
+  singleBounceVerticallyOut,
+} from "@toastup/react";
 
 add({
   inAnimation: bounceHorizontallyIn,
