--- a/packages/docs/docs/guides/limit-visible-toasts.mdx
+++ b/packages/docs/docs/guides/limit-visible-toasts.mdx
@@ -17,9 +17,7 @@ function LimitVisibleToastsExample() {
 
   return (
     <div>
-      <button onClick={handleClick}>
-        Add toast
-      </button>
+      <button onClick={handleClick}>Add toast</button>
       <Toaster visibleToasts={3} />
     </div>
   );
