--- a/packages/docs/docs/guides/custom-icon.mdx
+++ b/packages/docs/docs/guides/custom-icon.mdx
@@ -16,20 +16,18 @@ import CustomIcon from "@site/static/img/toast.svg";
 import { add, Toaster } from "@toastup/react";
 
 export function CustomIconExample() {
-  const handleClick = () => add({
-    icon: () => <CustomIcon />,
-  });
+  const handleClick = () =>
+    add({
+      icon: () => <CustomIcon />,
+    });
 
   return (
     <div>
-      <button onClick={handleClick}>
-        Add toast
-      </button>
+      <button onClick={handleClick}>Add toast</button>
       <Toaster />
     </div>
   );
 }
-
 ```
 
 import { Blob1 } from "@site/src/components/Blobs/Blob1";
