feat(docs): update "Custom toast" doc

--- a/packages/docs/docs/guides/custom-toast.mdx
+++ b/packages/docs/docs/guides/custom-toast.mdx
@@ -46,6 +46,10 @@ export function CustomToastExample() {
 To have the custom Toast animated, remember to pass `ref` prop to the Toast component.
 :::
 
+:::info
+To have the body animated add `data-component="body"` to element.
+:::
+
 import { Blob1 } from "@site/src/components/Blobs/Blob1";
 
 <Blob1 />
