feat(docs): update "Custom animation" doc to present 3 different animations

--- a/packages/docs/docs/guides/custom-animation.mdx
+++ b/packages/docs/docs/guides/custom-animation.mdx
@@ -13,27 +13,28 @@ import { CustomAnimationExample } from "@site/src/components/examples/CustomAnim
 
 Using animate.css
 
-```ts
-const animateCssFlipXInAnimation = {
+const animateCssFlipXInAnimation: ToastInAnimation = {
   type: animationType.in,
   className: "animate__animated animate__flipInX",
   animationTime: 450,
 };
-const animateCssFlipXOutAnimation = {
+
+const animateCssBounceDownOutAnimation: ToastOutAnimation = {
   type: animationType.out,
-  className: "animate__animated animate__flipOutX",
-  animationTime: 450,
+  className: "animate__animated animate__bounceOutDown",
+  animationTime: 650,
 };
-const animateCssFlipXInBodyAnimation: ToastInBodyAnimation = {
+
+const animateCssBounceInBodyAnimation: ToastInBodyAnimation = {
   type: animationType.body,
-  className: "animate__animated animate__flipInX",
-  animationTime: 450,
+  className: "animate__animated animate__bounceIn",
+  animationTime: 1000,
 };
 
 add({
   inAnimation: animateCssFlipXInAnimation,
-  outAnimation: animateCssFlipXOutAnimation,
-  inBodyAnimation: animateCssFlipXInBodyAnimation,
+      outAnimation: animateCssBounceDownOutAnimation,
+      inBodyAnimation: animateCssBounceInBodyAnimation,
   animateBody: true,
 });
 ```
