feat(docs): adjust docs to new api structure

--- a/packages/docs/docs/guides/accessibility.mdx
+++ b/packages/docs/docs/guides/accessibility.mdx
@@ -8,7 +8,9 @@ Ability to change the ARIA role of the toast. By default it's value is `alert`.
 ## Example
 
 ```ts
-add({ role: "alert" });
+import { toast } from "@toastup/react";
+
+toast.add({ role: "alert" });
 ```
 
 import { Blob1 } from "@site/src/components/Blobs/Blob1";
