--- a/packages/docs/docs/guides/custom-icon.mdx
+++ b/packages/docs/docs/guides/custom-icon.mdx
@@ -13,14 +13,13 @@ import { CustomIconExample } from "@site/src/components/examples/CustomIconExamp
 
 ```tsx
 import CustomIcon from "@site/static/img/toast.svg";
-import { add, Toaster } from "@toastup/react";
+import { toast, Toaster } from "@toastup/react";
 
 export function CustomIconExample() {
   const handleClick = () =>
-    add({
-      icon: () => <CustomIcon />,
+    toast.add({
+      icon: () => <CustomIcon className={styles.customIcon} />,
     });
-
   return (
     <div>
       <button onClick={handleClick}>Add toast</button>
