--- a/packages/docs/docs/guides/custom-id.mdx
+++ b/packages/docs/docs/guides/custom-id.mdx
@@ -8,7 +8,9 @@ Supports ability to set a custom id for the toast.
 ## Example
 
 ```ts
-const id = add({ id: "99" });
+import { toast } from "@toastup/react";
+
+const id = toast.add({ id: "99" });
 console.log(id); // 99
 ```
 
