--- a/packages/docs/docs/guides/enter-exit-animation.mdx
+++ b/packages/docs/docs/guides/enter-exit-animation.mdx
@@ -14,16 +14,22 @@ import { EnterExitAnimationExample } from "@site/src/components/examples/EnterEx
 You can change the default by setting `inAnimation` and `outAnimation` properties.
 `inAnimation` can be different from `outAnimation`.
 
-```ts
-import {
-  bounceHorizontallyIn,
-  singleBounceVerticallyOut,
-} from "@toastup/react";
+```tsx
+import { animation, toast, Toaster } from "@toastup/react";
 
-add({
-  inAnimation: bounceHorizontallyIn,
-  outAnimation: singleBounceVerticallyOut,
-});
+export function EnterExitAnimationExample() {
+  const handleClick = () =>
+    toast.add({
+      inAnimation: animation.in.bounceHorizontallyIn,
+      outAnimation: animation.out.singleBounceVerticallyOut,
+    });
+  return (
+    <div>
+      <button onClick={handleClick}>Add toast</button>
+      <Toaster />
+    </div>
+  );
+}
 ```
 
 import { Blob1 } from "@site/src/components/Blobs/Blob1";
