--- a/packages/docs/docs/guides/right-to-left.mdx
+++ b/packages/docs/docs/guides/right-to-left.mdx
@@ -11,8 +11,18 @@ import { RtlExample } from "@site/src/components/examples/RtlExample";
 
 ## Example
 
-```ts
-add({ rtl: true });
+```tsx
+import { toast, Toaster } from "@toastup/react";
+
+export function RtlExample() {
+  const handleClick = () => toast.add({ rtl: true });
+  return (
+    <div>
+      <button onClick={handleClick}>Add toast</button>
+      <Toaster />
+    </div>
+  );
+}
 ```
 
 import { Blob1 } from "@site/src/components/Blobs/Blob1";
