refactor(docs): rename className

--- a/packages/docs/docs/guides/remove-programmatically.mdx
+++ b/packages/docs/docs/guides/remove-programmatically.mdx
@@ -32,7 +32,7 @@ export function RemoveProgrammaticallyExample() {
   return (
     <div>
       <button onClick={handleAddClick}>Add toast</button>
-      <div className={styles.removeButtons}>
+      <div className={styles.buttonsRow}>
         <button onClick={handleRemoveClick}>Remove last</button>
         <button onClick={handleRemoveAllClick}>Remove all</button>
       </div>
