--- a/packages/docs/docs/guides/remove-programmatically.mdx
+++ b/packages/docs/docs/guides/remove-programmatically.mdx
@@ -26,7 +26,7 @@ export function RemoveProgrammaticallyExample() {
   };
   const handleRemoveClick = () => toast.remove(ids.pop());
   const handleRemoveAllClick = () => {
-    toast.removeAll();
+    toast.remove();
     setIds([]);
   };
   return (
