fix(docs): typo

--- a/packages/docs/docs/api/remove.mdx
+++ b/packages/docs/docs/api/remove.mdx
@@ -1,9 +1,9 @@
 ---
 title: remove
-description: Function for deleting toast notifications programatically.
+description: Function for deleting toast notifications programmatically.
 ---
 
-Function for deleting toast notifications programatically.
+Function for deleting toast notifications programmatically.
 
 | Title         | Description                                               | Type         | Default     |
 | ------------- | --------------------------------------------------------- | ------------ | ----------- |
