feat(docs): update hero

--- a/packages/docs/src/pages/index.mdx
+++ b/packages/docs/src/pages/index.mdx
@@ -24,11 +24,11 @@ import { Blob7 } from "@site/src/components/Blobs/Blob7";
 
 import { Blob8 } from "@site/src/components/Blobs/Blob8";
 
-# 🛝&nbsp;&nbsp; Playground
+# 🛝 Playground
 
 <Hero />
 
-# 🎉&nbsp;&nbsp; Features
+# 🎉 Features
 
 <div className={styles.features}>
 
