feat(docs): update Toaster api doc

--- a/packages/docs/docs/api/toaster.mdx
+++ b/packages/docs/docs/api/toaster.mdx
@@ -5,7 +5,7 @@ description: This component displays all of the toast notifications and can be p
 
 Component responsible for displaying all of the toast notifications. Can be positioned anywhere within application.
 
-:::warning
+:::info
 It is recommended to have only one Toaster component in the application.
 :::
 
