feat(docs): update "Getting started" doc

--- a/packages/docs/docs/getting-started.mdx
+++ b/packages/docs/docs/getting-started.mdx
@@ -32,8 +32,8 @@ function App() {
 }
 ```
 
-:::warning
-Make sure to include the Toaster component exactly once in your application structure.
+:::info
+Although multiple Toaster components is allowed, it is recommended to have only one Toaster component in the application.
 If you're unsure where to place it, best place is the root of your application.
 :::
 
