fix(docs): improvements in styling "Custom toast" doc

--- a/packages/docs/docs/guides/custom-toast.mdx
+++ b/packages/docs/docs/guides/custom-toast.mdx
@@ -25,6 +25,7 @@ const CustomToast = (props: ToastComponentProps) => {
     <div
       ref={props.ref}
       className={`${cssClassNames.toast} ${styles.customToast}`}
+      onClick={() => props.hide()}
     >
       <Beach className={styles.customToastImage} />
       {props.children}
