--- a/packages/docs/docs/guides/body-animation.mdx
+++ b/packages/docs/docs/guides/body-animation.mdx
@@ -15,7 +15,7 @@ To enable body animation set `animateBody` to `true`.
 
 ```tsx
 import { animation, toast, Toaster } from "@toastup/react";
-import styles from "./examples.module.scss";
+import "@toastup/react/style";
 
 export function BodyAnimationExample() {
   const handleClick = () =>
