--- a/packages/docs/docs/guides/choose-type.mdx
+++ b/packages/docs/docs/guides/choose-type.mdx
@@ -13,6 +13,7 @@ import { ChooseTypeExample } from "@site/src/components/examples/ChooseTypeExamp
 
 ```tsx
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 /*
 const type = {
