--- a/packages/docs/docs/guides/custom-animation.mdx
+++ b/packages/docs/docs/guides/custom-animation.mdx
@@ -22,6 +22,8 @@ import {
   ToastInBodyAnimation,
   ToastOutAnimation,
 } from "@toastup/react";
+import "@toastup/react/style";
+
 import "animate.css";
 
 const animateCssFlipXInAnimation: ToastInAnimation = {
