--- a/packages/docs/docs/guides/custom-toast.mdx
+++ b/packages/docs/docs/guides/custom-toast.mdx
@@ -19,6 +19,7 @@ import {
   ToastComponentProps,
   Toaster,
 } from "@toastup/react";
+import "@toastup/react/style";
 
 const CustomToast = (props: ToastComponentProps) => {
   return (
