--- a/packages/docs/docs/guides/enter-exit-animation.mdx
+++ b/packages/docs/docs/guides/enter-exit-animation.mdx
@@ -16,6 +16,7 @@ You can change the default by setting `inAnimation` and `outAnimation` propertie
 
 ```tsx
 import { animation, toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 export function EnterExitAnimationExample() {
   const handleClick = () =>
