--- a/packages/docs/docs/guides/remove-programmatically.mdx
+++ b/packages/docs/docs/guides/remove-programmatically.mdx
@@ -15,6 +15,7 @@ remove one toast
 
 ```tsx
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 import { useState } from "react";
 
 export function RemoveProgrammaticallyExample() {
