--- a/packages/docs/docs/guides/auto-hiding.mdx
+++ b/packages/docs/docs/guides/auto-hiding.mdx
@@ -13,6 +13,7 @@ import { AutoHideExample } from "@site/src/components/examples/AutoHideExample";
 
 ```tsx
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 export function AutoHideExample() {
   const handleClick = () => toast.add({ autoHide: 10000 });
