--- a/packages/docs/docs/guides/change-position.mdx
+++ b/packages/docs/docs/guides/change-position.mdx
@@ -13,6 +13,7 @@ import { ChangePositionExample } from "@site/src/components/examples/ChangePosit
 
 ```tsx
 import { position, toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 /*
 const position = {
