--- a/packages/docs/docs/guides/custom-icon.mdx
+++ b/packages/docs/docs/guides/custom-icon.mdx
@@ -14,6 +14,7 @@ import { CustomIconExample } from "@site/src/components/examples/CustomIconExamp
 ```tsx
 import CustomIcon from "@site/static/img/toast.svg";
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 export function CustomIconExample() {
   const handleClick = () =>
