--- a/packages/docs/docs/guides/limit-visible-toasts.mdx
+++ b/packages/docs/docs/guides/limit-visible-toasts.mdx
@@ -13,6 +13,7 @@ import { LimitVisibleToastsExample } from "@site/src/components/examples/LimitVi
 
 ```tsx
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 export function LimitVisibleToastsExample() {
   const handleClick = () => toast.add({ autoHide: 15000 });
