--- a/packages/docs/docs/guides/multi-toaster.mdx
+++ b/packages/docs/docs/guides/multi-toaster.mdx
@@ -13,6 +13,7 @@ import { MultiToasterExample } from "@site/src/components/examples/MultiToasterE
 
 ```tsx
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 export function MultiToasterExample() {
   const handleClickLeft = () =>
