--- a/packages/docs/docs/guides/right-to-left.mdx
+++ b/packages/docs/docs/guides/right-to-left.mdx
@@ -13,6 +13,7 @@ import { RtlExample } from "@site/src/components/examples/RtlExample";
 
 ```tsx
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 
 export function RtlExample() {
   const handleClick = () => toast.add({ rtl: true });
