--- a/packages/docs/docs/guides/styling.mdx
+++ b/packages/docs/docs/guides/styling.mdx
@@ -13,6 +13,7 @@ import { StylingExample } from "@site/src/components/examples/StylingExample";
 
 ```tsx
 import { toast, Toaster } from "@toastup/react";
+import "@toastup/react/style";
 import { useEffect } from "react";
 
 export function StylingExample() {
